# ComfyUI_EU_AI_Label

./: .gitignore  LICENSE  README.md  euai_core.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
example_workflows/: eu-ai-label-example.json
tests/: conftest.py  test_batch.py  test_roundtrip.py
web/: eu_ai_label.js
